# Fastview4Geo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.ps1  install.sh
core/include/: AdaptiveColorMapper.h  GdalCommon.h  ImageProcessor.h  MetadataReader.h  MultispectralProcessor.h  OverviewGenerator.h  PanchromaticProcessor.h  TileManager.h
core/src/: MetadataReader.cpp  main.cpp
